--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 PUBLIC_BASE_URL="http://localhost:5173"
 
 # Database
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
+TURSO_DATABASE_URL="libsql://ko-sk-n00ki.turso.io"
+TURSO_DATABASE_AUTH_TOKEN="token"
 
 # AWS S3
 PRIVATE_AWS_ACCESS_KEY=""
