--- a/package.json
+++ b/package.json
@@ -30,27 +30,32 @@
 		"@typescript-eslint/parser": "^6.7.4",
 		"autoprefixer": "^10.4.16",
 		"better-sqlite3": "^8.7.0",
+		"bits-ui": "^0.5.7",
+		"clsx": "^2.0.0",
 		"cssnano": "^6.0.1",
 		"dotenv": "^16.3.1",
 		"drizzle-kit": "^0.19.13",
-		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.34.0",
-		"lucide-svelte": "^0.284.0",
-		"postcss": "^8.4.31",
+		"eslint": "^8.51.0",
+		"formsnap": "^0.1.4",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^3.0.3",
+		"postcss": "^8.4.31",
 		"prettier-plugin-svelte": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.5",
-		"svelte": "^4.2.1",
+		"prettier": "^3.0.3",
+		"radix-icons-svelte": "^1.2.1",
 		"svelte-check": "^3.5.2",
 		"svelte-french-toast": "^1.2.0",
+		"svelte": "^4.2.1",
 		"sveltekit-superforms": "^1.8.0",
+		"tailwind-merge": "^1.14.0",
+		"tailwind-variants": "^0.1.14",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.4.11",
 		"vite-node": "^0.34.6",
+		"vite": "^4.4.11",
 		"vitest": "^0.34.6",
 		"zod": "^3.22.4"
 	},
@@ -59,15 +64,9 @@
 		"@aws-sdk/s3-request-presigner": "^3.427.0",
 		"@libsql/client": "^0.3.5",
 		"@lucia-auth/adapter-sqlite": "^2.0.0",
-		"bits-ui": "^0.5.7",
-		"clsx": "^2.0.0",
 		"drizzle-orm": "^0.28.6",
-		"formsnap": "^0.1.4",
 		"lucia": "^2.7.1",
-		"radix-icons-svelte": "^1.2.1",
 		"svelte-email": "^0.0.4",
-		"sveltekit-flash-message": "^2.2.1",
-		"tailwind-merge": "^1.14.0",
-		"tailwind-variants": "^0.1.14"
+		"sveltekit-flash-message": "^2.2.1"
 	}
 }
