--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@aws-sdk/s3-request-presigner": "^3.433.0",
 		"@libsql/client": "^0.3.6",
 		"@lucia-auth/adapter-sqlite": "^2.0.1",
+		"@sentry/sveltekit": "^7.74.1",
 		"drizzle-orm": "^0.28.6",
 		"lucia": "^2.7.1",
 		"svelte-email": "^0.0.4",
