min-h-screen to svh for mobile safari

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@lucia-auth/adapter-sqlite": "^2.0.1",
     "drizzle-orm": "^0.29.0",
     "lucia": "^2.7.4",
+    "resend": "^2.0.0",
     "svelte-email": "^0.0.4",
     "sveltekit-flash-message": "^2.2.1"
   }
